force-app/main/default/objects/sked__Resource__c/fields/sked_Primary_Work_Area__c.field-meta.xml
<CustomField>
    <fullName>sked_Primary_Work_Area__c</fullName>
    <label>Primary Work Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>