force-app/main/default/objects/sked__Resource__c/fields/sked_Re_hire_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Re_hire_Date__c</fullName>
    <label>Re-hire Date</label>
    <type>Date</type>
</CustomField>