force-app/main/default/objects/sked__Resource__c/fields/sked_REAL_ID_Compliant_indicator__c.field-meta.xml
<CustomField>
    <fullName>sked_REAL_ID_Compliant_indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HRP-14419</description>
    <label>REAL ID Compliant indicator</label>
    <type>Checkbox</type>
</CustomField>