force-app/main/default/objects/sked__Resource__c/fields/sked_Real_ID_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Real_ID_Expiration_Date__c</fullName>
    <description>For person resource, this stores the expiration date of resource&apos;s real id.</description>
    <label>Real ID Expiration Date</label>
    <type>Date</type>
</CustomField>