force-app/main/default/objects/sked__Resource__c/fields/sked_Satellite_Address__c.field-meta.xml
<CustomField>
    <fullName>sked_Satellite_Address__c</fullName>
    <label>Satellite Address</label>
    <type>TextArea</type>
</CustomField>