force-app/main/default/objects/sked__Resource__c/fields/sked_Satellite_Address_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>sked_Satellite_Address_Geolocation__c</fullName>
    <label>Satellite Address Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>