force-app/main/default/objects/sked__Resource__c/fields/sked_Satellite_Country__c.field-meta.xml
<CustomField>
    <fullName>sked_Satellite_Country__c</fullName>
    <label>Satellite Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>