force-app/main/default/objects/sked__Resource__c/fields/sked_Secondary_Work_Area_s__c.field-meta.xml
<CustomField>
    <fullName>sked_Secondary_Work_Area_s__c</fullName>
    <label>Secondary Work Area(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>