force-app/main/default/objects/sked__Resource__c/fields/sked_Seniority_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Seniority_Date__c</fullName>
    <label>Seniority Date</label>
    <type>Date</type>
</CustomField>