force-app/main/default/objects/sked__Resource__c/fields/sked_Seniority_Rank__c.field-meta.xml
<CustomField>
    <fullName>sked_Seniority_Rank__c</fullName>
    <label>Seniority Rank</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>