force-app/main/default/objects/sked__Resource__c/fields/sked_Seniority_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Seniority_Time__c</fullName>
    <label>Seniority Time</label>
    <type>Time</type>
</CustomField>