force-app/main/default/objects/sked__Resource__c/fields/sked_Short_Desc__c.field-meta.xml
<CustomField>
    <fullName>sked_Short_Desc__c</fullName>
    <label>Short Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>