force-app/main/default/objects/sked__Resource__c/fields/sked_Site_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Type__c</fullName>
    <label>Site Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Drive_Types</valueSetName>
    </valueSet>
</CustomField>