force-app/main/default/objects/sked__Resource__c/fields/sked_Site_Type_Preference__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Type_Preference__c</fullName>
    <label>Site Type Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>