force-app/main/default/objects/sked__Resource__c/fields/sked_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>sked_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sked_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>