force-app/main/default/objects/sked__Resource__c/fields/sked_Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>sked_Supervisor_Email__c</fullName>
    <label>Supervisor Email</label>
    <type>Email</type>
</CustomField>