force-app/main/default/objects/sked__Resource__c/fields/sked_Supervisor_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>sked_Supervisor_Employee_ID__c</fullName>
    <label>Supervisor Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>