force-app/main/default/objects/sked__Resource__c/fields/sked_Supervisor_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>sked_Supervisor_Primary_Phone__c</fullName>
    <label>Supervisor Primary Phone</label>
    <type>Phone</type>
</CustomField>