force-app/main/default/objects/sked__Resource__c/fields/sked_Title__c.field-meta.xml
<CustomField>
    <fullName>sked_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>