force-app/main/default/objects/sked__Resource__c/fields/sked_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Turnaround_Time__c</fullName>
    <defaultValue>11</defaultValue>
    <label>Turnaround Time (hrs)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>