force-app/main/default/objects/sked__Resource__c/fields/sked_ULID__c.field-meta.xml
<CustomField>
    <fullName>sked_ULID__c</fullName>
    <externalId>true</externalId>
    <label>ULID (A #)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>