force-app/main/default/objects/sked__Resource__c/fields/sked_Union_Description__c.field-meta.xml
<CustomField>
    <fullName>sked_Union_Description__c</fullName>
    <label>Union Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>