force-app/main/default/objects/sked__Resource__c/fields/sked_VCN_Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>sked_VCN_Volunteer_ID__c</fullName>
    <label>VCN Volunteer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>