force-app/main/default/objects/sked__Resource__c/fields/sked_VIN__c.field-meta.xml
<CustomField>
    <fullName>sked_VIN__c</fullName>
    <label>VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>