force-app/main/default/objects/sked__Resource__c/fields/sked_Virtual_WFH__c.field-meta.xml
<CustomField>
    <fullName>sked_Virtual_WFH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual/WFH</label>
    <type>Checkbox</type>
</CustomField>