force-app/main/default/objects/sked__Resource__c/fields/sked_Work_Address_3__c.field-meta.xml
<CustomField>
    <fullName>sked_Work_Address_3__c</fullName>
    <label>Work Address 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>