force-app/main/default/objects/sked__Resource__c/fields/sked_Work_Address_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>sked_Work_Address_GeoLocation__c</fullName>
    <label>Work Address GeoLocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>