force-app/main/default/objects/sked__Resource__c/fields/sked_Work_City__c.field-meta.xml
<CustomField>
    <fullName>sked_Work_City__c</fullName>
    <label>Work City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>