force-app/main/default/objects/sked__Resource__c/fields/sked_Work_Limitations__c.field-meta.xml
<CustomField>
    <fullName>sked_Work_Limitations__c</fullName>
    <label>Work Limitations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>