force-app/main/default/objects/sked__Resource__c/fields/sked_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>sked_Work_Phone__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>