force-app/main/default/objects/sked__Resource__c/fields/sked_Work_Phone_Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Work_Phone_Reference_Type__c</fullName>
    <label>Work Phone Reference Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>