force-app/main/default/objects/sked__Resource__c/fields/sked_Work_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Work_Zip_Code__c</fullName>
    <label>Work Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>