force-app/main/default/objects/sked__Resource__c/fields/Use_CO_Address_for_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Use_CO_Address_for_Scheduling__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Use Collection Operation Address for Scheduling</inlineHelpText>
    <label>Use Collection Operation Address for Sch</label>
    <type>Checkbox</type>
</CustomField>