force-app/main/default/objects/sked__Resource__c/recordTypes/sked_Asset.recordType-meta.xml
<RecordType>
    <fullName>sked_Asset</fullName>
    <active>true</active>
    <label>Asset</label>
</RecordType>