force-app/main/default/objects/sked__Resource__c/recordTypes/sked_Staff.recordType-meta.xml
<RecordType>
    <fullName>sked_Staff</fullName>
    <active>true</active>
    <label>Staff</label>
</RecordType>