force-app/main/default/objects/sked__Resource__c/validationRules/AllowWorkAddressEditForWHF.validationRule-meta.xml
<ValidationRule>
    <fullName>AllowWorkAddressEditForWHF</fullName>
    <active>true</active>
    <description>Work Address is editable by the selected users only when the WFH/Virtual checkbox is true.</description>
    <errorConditionFormula>AND(
    OR(
        ISCHANGED( sked_Work_Address_1__c),
        ISCHANGED( sked_Work_Address_2__c),
        ISCHANGED( sked_Work_Address_3__c),
        ISCHANGED( sked_Work_City__c),
        ISCHANGED( sked_Work_Country__c),
        ISCHANGED(sked_Work_State__c),
        ISCHANGED(sked_Work_Zip_Code__c)
    ),
    OR(
        AND(
            (sked_Virtual_WFH__c != false),
            ($Profile.Name != &#39;System Administrator&#39;),
            ($Profile.Name != &#39;APS Admin&#39;),
            ($Profile.Name != &#39;APS Management&#39;),
            ($Profile.Name != &#39;APS Planner&#39;),
            ($Profile.Name != &#39;APS Scheduler&#39;),
            ($Profile.Name != &#39;Global Admin&#39;)
        ),
        AND(
            (sked_Virtual_WFH__c != true),
            ($Profile.Name != &#39;System Administrator&#39;),
            ($Profile.Name != &#39;Global Admin&#39;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Only APS Users, Global Admin and System Admin can edit Work Address when WFH/Virtual Field is set.</errorMessage>
</ValidationRule>