force-app/main/default/objects/sked__Resource__c/validationRules/ARFSvalidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARFSvalidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISCHANGED(sked_Address_Referenced_for_Scheduling__c) ,
ISCHANGED(Use_CO_Address_for_Scheduling__c),
ISNEW()
),
NOT(ISPICKVAL(sked_Address_Referenced_for_Scheduling__c, &#39;Work&#39;)),
Use_CO_Address_for_Scheduling__c
)</errorConditionFormula>
    <errorDisplayField>sked_Address_Referenced_for_Scheduling__c</errorDisplayField>
    <errorMessage>Field can be checked only if the Address Referenced for Scheduling is Work.</errorMessage>
</ValidationRule>