force-app/main/default/objects/sked__Resource__c/validationRules/only_System_Admin_can_edit_Virtual_WFH.validationRule-meta.xml
<ValidationRule>
    <fullName>only_System_Admin_can_edit_Virtual_WFH</fullName>
    <active>true</active>
    <description>Only system admin can edit the Virtual/WFH field</description>
    <errorConditionFormula>AND(
    ISCHANGED(sked_Virtual_WFH__c),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorDisplayField>sked_Virtual_WFH__c</errorDisplayField>
    <errorMessage>Only system admin can edit the Virtual/WFH field</errorMessage>
</ValidationRule>