force-app/main/default/objects/sked__Resource__c/validationRules/OnlyAlphaForLineOfService.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyAlphaForLineOfService</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(sked_Line_of_Service__c, &quot;([a-zA-Z ])*&quot;))</errorConditionFormula>
    <errorMessage>Line of Service accepts only alphabetic characters.</errorMessage>
</ValidationRule>