force-app/main/default/objects/sked__Resource__c/validationRules/OnlyAlphanumericForJobCode.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyAlphanumericForJobCode</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(sked_Job_Code__c) &amp;&amp;
NOT( REGEX( sked_Job_Code__c , &quot;[a-zA-Z0-9_+-]+&quot;))</errorConditionFormula>
    <errorMessage>Job Code accepts only alphanumeric characters.</errorMessage>
</ValidationRule>