force-app/main/default/objects/sked__Resource__c/validationRules/PersonDailyTimeOffHoursIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PersonDailyTimeOffHoursIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked__Resource_Type__c,&#39;Person&#39;)
&amp;&amp; ISNULL(sked_Daily_Time_Off_Hours__c)</errorConditionFormula>
    <errorMessage>Daily Time Off Hours is required</errorMessage>
</ValidationRule>