force-app/main/default/objects/sked__Resource__c/validationRules/PersonEmployeeIdIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PersonEmployeeIdIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked__Resource_Type__c,&#39;Person&#39;)
&amp;&amp; sked_Employee_ID__c == NULL</errorConditionFormula>
    <errorMessage>Employee ID is required.</errorMessage>
</ValidationRule>