force-app/main/default/objects/sked__Resource__c/validationRules/PersonFirstNameIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PersonFirstNameIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked__Resource_Type__c,&#39;Person&#39;)
&amp;&amp; sked_First_Name__c == NULL</errorConditionFormula>
    <errorMessage>First Name is required</errorMessage>
</ValidationRule>