force-app/main/default/objects/sked__Resource__c/validationRules/PersonLastNameIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PersonLastNameIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked__Resource_Type__c,&#39;Person&#39;)
&amp;&amp; sked_Last_Name__c == NULL</errorConditionFormula>
    <errorMessage>Last Name is required.</errorMessage>
</ValidationRule>