force-app/main/default/objects/sked__Resource__c/validationRules/PersonMaxHoursPerWeekIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PersonMaxHoursPerWeekIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked__Resource_Type__c,&#39;Person&#39;)
&amp;&amp; sked_Max_Hours_Per_Week__c == NULL</errorConditionFormula>
    <errorMessage>Max Hours Per Week is required.</errorMessage>
</ValidationRule>