force-app/main/default/objects/sked__Resource__c/validationRules/PersonMinHoursPerWeekIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PersonMinHoursPerWeekIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked__Resource_Type__c,&#39;Person&#39;)
&amp;&amp; sked_Min_Hours_Per_Week__c == NULL</errorConditionFormula>
    <errorMessage>Min Hours Per Week is requried.</errorMessage>
</ValidationRule>