force-app/main/default/objects/sked__Resource__c/validationRules/PersonTurnaroundTimeIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PersonTurnaroundTimeIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked__Resource_Type__c,&#39;Person&#39;)
&amp;&amp; sked_Turnaround_Time__c == NULL</errorConditionFormula>
    <errorMessage>Turnaround Time is required</errorMessage>
</ValidationRule>