force-app/main/default/objects/sked__Resource__c/validationRules/PersonUlidIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PersonUlidIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked__Resource_Type__c,&#39;Person&#39;)
&amp;&amp; sked_ULID__c == NULL</errorConditionFormula>
    <errorMessage>ULID (A #) is required.</errorMessage>
</ValidationRule>