force-app/main/default/objects/sked__Resource__c/validationRules/RequireAssetType.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireAssetType</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked__Resource_Type__c,&#39;Asset&#39;) 
&amp;&amp; ISPICKVAL(sked_Asset_Type__c,&#39;&#39;)</errorConditionFormula>
    <errorMessage>Asset Type is required.</errorMessage>
</ValidationRule>