force-app/main/default/objects/sked__Resource__c/validationRules/SatelliteAddressNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>SatelliteAddressNotBlank</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked_Address_Referenced_for_Scheduling__c, &#39;Satellite&#39;) &amp;&amp; (ISBLANK(sked_Satellite_Address__c) || ISNULL(sked_Satellite_Address_Geolocation__c))</errorConditionFormula>
    <errorMessage>Satellite Address/GeoLocation cannot be blank.</errorMessage>
</ValidationRule>