force-app/main/default/objects/sked__Resource__c/validationRules/Staff_MaxHours_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_MaxHours_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(RecordType.Name =&#39;Staff&#39;),
ISBLANK(sked_Max_Hours_Per_Week__c),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Global Admin&quot;,
$Profile.Name &lt;&gt; &quot;Informatica Integration Users&quot;
)</errorConditionFormula>
    <errorDisplayField>sked_Max_Hours_Per_Week__c</errorDisplayField>
    <errorMessage>&#39;Max Hours Per Week&#39; field is required for saving the record unless you are System Admin, Global Admin or Integration User</errorMessage>
</ValidationRule>