force-app/main/default/objects/sked__Resource__c/validationRules/Staff_MinHours_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_MinHours_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(RecordType.Name =&apos;Staff&apos;),
ISBLANK(sked_Min_Hours_Per_Week__c),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Global Admin&quot;,
$Profile.Name &lt;&gt; &quot;Informatica Integration Users&quot;
)</errorConditionFormula>
    <errorDisplayField>sked_Min_Hours_Per_Week__c</errorDisplayField>
    <errorMessage>&apos;Min Hours Per Week&apos; field is required for saving the record unless you are System Admin, Global Admin or Integration User</errorMessage>
</ValidationRule>