force-app/main/default/objects/sked__Resource__c/validationRules/Staff_PrimaryPhone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_PrimaryPhone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(RecordType.Name =&apos;Staff&apos;),
ISBLANK(sked__Primary_Phone__c),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Global Admin&quot;,
$Profile.Name &lt;&gt; &quot;Informatica Integration Users&quot;
)</errorConditionFormula>
    <errorDisplayField>sked__Primary_Phone__c</errorDisplayField>
    <errorMessage>&apos;Primary Phone&apos; field is required for saving the record unless you are System Admin, Global Admin or Integration User</errorMessage>
</ValidationRule>