force-app/main/default/objects/sked__Resource__c/validationRules/Staff_TurnaroundTime_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_TurnaroundTime_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(RecordType.Name =&apos;Staff&apos;),
ISBLANK(sked_Turnaround_Time__c),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Global Admin&quot;,
$Profile.Name &lt;&gt; &quot;Informatica Integration Users&quot;
)</errorConditionFormula>
    <errorDisplayField>sked_Turnaround_Time__c</errorDisplayField>
    <errorMessage>&apos;Turnaround Time&apos; field is required for saving the record unless you are System Admin, Global Admin or Integration User</errorMessage>
</ValidationRule>