force-app/main/default/objects/sked__Resource__c/validationRules/UnableToSetMaxHoursForAsset.validationRule-meta.xml
<ValidationRule>
    <fullName>UnableToSetMaxHoursForAsset</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(sked__Resource_Type__c, &#39;Asset&#39;), NOT(ISNULL(sked_Max_Hours_Per_Week__c)))</errorConditionFormula>
    <errorMessage>Unable to populate Maximum Weekly Hours for Asset Resources</errorMessage>
</ValidationRule>