force-app/main/default/objects/sked__Resource__c/listViews/Asset_Resources.listView-meta.xml
<ListView>
    <fullName>Asset_Resources</fullName>
    <columns>NAME</columns>
    <columns>sked_ARC_Region_Name__c</columns>
    <columns>sked_Biomed_Collection_Op_Center_Name__c</columns>
    <columns>sked__Resource_Type__c</columns>
    <columns>sked_Site_Type__c</columns>
    <columns>sked__Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>sked_CDL__c</columns>
    <columns>sked_DOT__c</columns>
    <columns>sked_Liftgate__c</columns>
    <columns>sked_Pres_Donor_Capacity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Asset_Type__c</field>
        <operation>equals</operation>
        <value>Vehicle</value>
    </filters>
    <label>Vehicles</label>
</ListView>