force-app/main/default/objects/sked__Resource__c/listViews/Copy_of_All_2.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_2</fullName>
    <columns>NAME</columns>
    <columns>sked__Resource_Type__c</columns>
    <columns>sked__User__c</columns>
    <columns>sked__Category__c</columns>
    <columns>sked__Primary_Region__c</columns>
    <columns>sked_Biomed_Collection_Op_Center_Name__c</columns>
    <columns>sked_Job_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Copy of All</label>
</ListView>