force-app/main/default/objects/sked__Resource__c/listViews/Equipment.listView-meta.xml
<ListView>
    <fullName>Equipment</fullName>
    <columns>NAME</columns>
    <columns>sked_ARC_Region_Name__c</columns>
    <columns>sked_Biomed_Collection_Op_Center_Name__c</columns>
    <columns>sked__Category__c</columns>
    <columns>sked_Dedicated_to_Site__c</columns>
    <columns>sked_Site_Type__c</columns>
    <columns>sked_Secondary_Work_Area_s__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Asset_Type__c</field>
        <operation>equals</operation>
        <value>Equipment</value>
    </filters>
    <filters>
        <field>sked__Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>sked_ARC_Region_Name__c</field>
        <operation>contains</operation>
        <value>greater penn</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>sked__Resource__c.sked_Asset</value>
    </filters>
    <label>Equipment</label>
</ListView>