force-app/main/default/objects/sked__Resource__c/listViews/Resources_Only.listView-meta.xml
<ListView>
    <fullName>Resources_Only</fullName>
    <columns>NAME</columns>
    <columns>sked_Employee_ID__c</columns>
    <columns>sked_Biomed_Collection_Op_Center_Name__c</columns>
    <columns>sked_Employment_Status__c</columns>
    <columns>sked_Premium_Pay_Roles__c</columns>
    <columns>sked__Email__c</columns>
    <columns>sked_Hire_Date__c</columns>
    <columns>sked__Primary_Phone__c</columns>
    <columns>sked_Roles__c</columns>
    <columns>sked_Job_Code__c</columns>
    <columns>sked_FCC_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked__Resource_Type__c</field>
        <operation>equals</operation>
        <value>Person</value>
    </filters>
    <filters>
        <field>sked__Employment_Type__c</field>
        <operation>equals</operation>
        <value>Volunteer</value>
    </filters>
    <label>Resources Only</label>
</ListView>