force-app/main/default/objects/sked__Resource__c/listViews/sked__All.listView-meta.xml
<ListView>
    <fullName>sked__All</fullName>
    <columns>NAME</columns>
    <columns>sked__Resource_Type__c</columns>
    <columns>sked__User__c</columns>
    <columns>sked__Category__c</columns>
    <columns>sked__Primary_Region__c</columns>
    <columns>sked_Biomed_Collection_Op_Center_Name__c</columns>
    <columns>sked_Job_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Collection_Operation_Name_Staging__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>sked_District_Name__c</field>
        <operation>contains</operation>
        <value>Roch</value>
    </filters>
    <filters>
        <field>sked_Asset_Type__c</field>
        <operation>contains</operation>
        <value>Equipment</value>
    </filters>
    <label>All</label>
</ListView>